--- a/cppAlgorithm/cppAlgorithm.vcxproj.filters
+++ b/cppAlgorithm/cppAlgorithm.vcxproj.filters
@@ -216,5 +216,11 @@
     <ClCompile Include="Q42860.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="cppStudy_220427.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="PC++08_p354.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
