자료구조 과제(22.04.16)
- 자료구조_연결리스트를 이용한 다항식의 덧셈 구현

--- a/cppAlgorithm/cppAlgorithm.vcxproj
+++ b/cppAlgorithm/cppAlgorithm.vcxproj
@@ -161,10 +161,12 @@
     <ClCompile Include="DataStructure_LinkedList02.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="DataStructure_LinkedList03.cpp">
+    <ClCompile Include="DataStructure07_2017110060 강수연.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="DataStructure_LinkedList04.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="DataStructure_LinkedList04.cpp" />
     <ClCompile Include="DataStruectrue01_practice.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
